@@ -20,6 +20,7 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 public class Bot implements Runnable {
@@ -42,7 +43,7 @@ public class Bot implements Runnable {
     private int chatTimeOut;
     private int chatTimestamp;
     private short lastChatIndex;
-    private int bubble;
+    private final int bubble;
 
 
     private final String type;
@@ -108,7 +109,7 @@ public class Bot implements Runnable {
         this.chatRandom = false;
         this.chatDelay = 10;
         this.chatTimeOut = Emulator.getIntUnixTimestamp() + this.chatDelay;
-        this.chatLines = new ArrayList<>(Arrays.asList("Default Message :D"));
+        this.chatLines = new ArrayList<>(List.of("Default Message :D"));
         this.type = bot.getType();
         this.effect = bot.getEffect();
         this.bubble = bot.getBubbleId();
